bug: 将md5放到ird-RnBridge里面v4

--- a/example/index.html
+++ b/example/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
   <div style="width: 100px; height: 200px; color: red">nihao</div>
+  <script type="text/javascript" src="../ird-RnBridge/dist/RnBridge.js"></script>
+  <script>
+      RnBridge.RnJsBridge.switchMode({mode: 'h5'});
+  </script>
 </body>
 </html>
