feat:将iife变成umd打包

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
   <div style="width: 100px; height: 200px; color: red">nihao</div>
   <script type="text/javascript" src="../ird-RnBridge/dist/RnBridge.js"></script>
   <script>
-      RnBridge.switchMode({mode: 'rn'});
+      RnBridge.switchMode({mode: 'h5'});
   </script>
 </body>
 </html>
