feat：添加performance性能数据的api方法

--- a/example/index.html
+++ b/example/index.html
@@ -25,6 +25,7 @@
       // });
       RnBridge.checkSafety({demo: 'demo'}, () => {
           document.getElementById('demo').style.color = 'blue';
+          RnBridge.sendPerformance();
           // RnBridge.setTitle('设置');
       });
       RnBridge.invokeRN({
