feat：开发获取各资源的性能参数的api

--- a/example/index.html
+++ b/example/index.html
@@ -56,6 +56,7 @@
           send({isSuccess: false, result: {a11: 490}});
       });
       RnBridge.sendPerformance();
+      RnBridge.sendPerformanceByType()
   </script>
 </body>
 </html>
