rn侧添加重置数据功能，避免再次进入webview页面时还有残留数据

--- a/example/index.html
+++ b/example/index.html
@@ -29,10 +29,10 @@
       //     alert('ad')
       //     RnBridge.invokeRN({method: 'setTitle', params: {name: title}})
       // });
-      RnBridge.checkSafety({demo: 'demo'}, () => {
+      RnBridge.checkSafety({demo: 'demo'}, (data) => {
           document.getElementById('demo').style.color = 'blue';
           // RnBridge.setTitle('设置');
-          console.log('bridge success');
+          console.log('bridge success:', data);
           RnBridge.getSessionStore(['sat2'], (data) => {
               const content = document.getElementById('content');
               content.innerText = JSON.stringify(data);
